--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -154,7 +154,7 @@ input[type="submit"] {
 	width: 40px;
 	height: 40px;
 	border-radius: 50%;
-	background: var(--bg-bg-grey);
+	background: var(--style);
 	color: var(--fill-icon);
 	justify-content: center;
 }
