--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -1,31 +1,55 @@
 footer.footer
 	.container
-		.row
+		//======FOOTER ROW====
+		.row.footer-top
 			.col-2
 				.footer-logo
 					a(href="#!").logo
 						+svg-icon('logo')
-			.col-2.offset-2
-				nav.menu-nav
-					.semi-16 Для мужчин
-					a(href="#!") Весна 2024 Мужская коллекция
-					a(href="#!") Зима 2024 Мужская коллекция
-					
-			.col-2
-				nav.menu-nav
-					.semi-16 Для женщин
-					a(href="#!") Весна 2024  Женская коллекция
-					a(href="#!") Зима 2024 Женская коллекция
+			.col-4.col-xl-6.ofs-2.ofs-xl-0
+				nav.menu-nav.d-flex
+					//=====block====
+					.menu-nav-block
+						.semi-16 Для мужчин
+						a(href="#!") Весна 2024 Мужская коллекция
+						a(href="#!") Зима 2024 Мужская коллекция
+					//=====block====
+					.menu-nav-block
+						.semi-16 Для женщин
+						a(href="#!") Весна 2024  Женская коллекция
+						a(href="#!") Зима 2024 Женская коллекция
 			
-			.col-1.offset-1
-				nav.menu-nav
-					a(href="#!") О бренде
-					a(href="#!") Вакансии
-					a(href="#!") Контакты
-					a(href="#!") Где купить
+			.col-3.col-xl-4.ofs-1.ofs-xl-0
+				nav.menu-nav.d-flex
+					//=====block====
+					.menu-nav-block
+						a(href="#!") О бренде
+						a(href="#!") Вакансии
+						a(href="#!") Контакты
+						a(href="#!") Где купить
+		
+					//=====block====
+					.menu-nav-block
+						a(href="#!") Технологии и материалы
+						a(href="#!") Таблица размеров
+						a(href="#!") Уход за изделеем
+
+		//======FOOTER ROW====
+		.row.footer-bottom
+			.col-2.footer-copiryght
+				p &copy;NorthBloom  1997 - 2024 г.
+			
+			.col-2.ofs-6.ofs-xxl-4
+				.social-block
+					a(href="#!")
+						img(src="./img/svg-social/vk2.svg" alt="vk")
+					a(href="#!")
+						img(src="./img/svg-social/vc2.svg" alt="vc")
+					a(href="#!")
+						img(src="./img/svg-social/dzen2.svg" alt="dzen")
+					a(href="#!")
+						img(src="./img/svg-social/tg2.svg" alt="tg")
 			.col-2
-				nav.menu-nav
-					a(href="#!") Технологии и материалы
-					a(href="#!") Таблица размеров
-					a(href="#!") Уход за изделеем
+				button(type="button").btn.btn--slim Написать вопрос директору
+				
 					
