--- a/src/scss/blocks/_buttons.scss
+++ b/src/scss/blocks/_buttons.scss
@@ -38,6 +38,11 @@
 		background-color: var(--button-accent-hover);
 	}
 }
+.btn--slim{
+	height: 40px;
+	line-height: 40px;
+	font-size: 16px;
+}
 .btn-toggle-search{
 	width: 24px;
 	height: 24px;
