--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -17,6 +17,7 @@
 	--button-disabled: #e0e0e0;
 	--button-accent: #93ab42;
 	--button-accent-hover:#a9bc68;
+	--accent-hover: #a9bc68;
 	--accent: #93ab42;
 	--imput-imput-gray: #f8f8f8;
 	--imput-imput-white: #fff;
