--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,8 @@
 @import "blocks/_header-menu.scss";
 @import "blocks/_header-search.scss";
 
+@import "blocks/_cooki-popup.scss";
+
 
 
  @import "sections/_header.scss";
