--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -11,6 +11,8 @@ block content
 
 		
 		include ../sections/_footer
+		include ../blocks/_cooki-popup
+
 
 block variables
 	-var title = "Главная";
