add-cooki-popup

--- a/src/pug/blocks/_cooki-popup.pug
+++ b/src/pug/blocks/_cooki-popup.pug
@@ -1,1 +1,10 @@
 .popup-wrapper.cooki-popup
+	//===btn close popup ===
+	button(type="button").btn-close
+		svg.svg-close
+			use(href='./img/sprite.svg#svg-close')
+	//===text ===
+	.txt-18 Мы используем cookie
+	p.txt-14 Продолжая пользоваться сайтом, вы даёте Согласие на автоматический сбор и анализ ваших данных, необходимых для работы сайта и его улучшения, использование файлов cookie.
+	 
+	button(type="button").mt-24.btn.btn--medium.w-100 Согласен
