--- a/src/scss/base/_vendore-class.scss
+++ b/src/scss/base/_vendore-class.scss
@@ -14,7 +14,7 @@
 	color: var(--style);
 }
 .flx-center,.btn-toggle-search,.center-group,
-.btn-clear,.flx-center-column {
+.btn-clear,.flx-center-column,.close-btn {
 	display: flex;
 	justify-content: center;
 	align-items: center;
