--- a/src/scss/blocks/_buttons.scss
+++ b/src/scss/blocks/_buttons.scss
@@ -43,8 +43,18 @@
 	line-height: 40px;
 	font-size: 16px;
 }
+.btn--medium{
+	width: 56px;
+	line-height: 56px;
+	font-size: 16px;
+}
 .btn-toggle-search{
 	width: 24px;
 	height: 24px;
 	.svg-search{color: var(--style); pointer-events: none;}
+}
+.btn-close{
+	width: 24px;
+	height: 24px;
+	
 }
