--- a/src/scss/blocks/_cooki-popup.scss
+++ b/src/scss/blocks/_cooki-popup.scss
@@ -1,7 +1,21 @@
 .popup-wrapper{
+	position: relative;
+	
 	padding: 48px 16px 32px;
 	background: var(--bg-bg-grey);
 	width: min(600px, 100%);
+	.btn-close{
+		position: absolute;
+		top: 16px;
+		right: 16px;
+		z-index: 3;
+		svg{transition: .3s;}
+		 
+		&:hover{
+			svg{transform: scale(1.2);}
+			
+		}
+	}
 
 }
 .cooki-popup{
@@ -9,4 +23,5 @@
 	z-index: 10;
 	bottom: 24px;
 	right: 24px;
+	.txt-18{margin-bottom: 10px;}
 }
