--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -10,8 +10,8 @@ block content
 				span Главная
 			a(href="authorization.html")
 				span Страница Авторизации
-			//- a(href="#!")
-			//- 	span Отдельная страница
+			a(href="partners-form.html")
+				span Стать партнером(форма)
 			//- a(href="#!")
 			//- 	span Отдельная страница
 block variables
