--- a/src/scss/base/_vendore-class.scss
+++ b/src/scss/base/_vendore-class.scss
@@ -66,7 +66,7 @@
 .mb-40 {
 	margin-bottom: 40px;
 }
-.ml-auto{
-	margin-left: auto!important;
-	
+.ml-auto{margin-left: auto!important;}
+.mx-auto{
+	margin-inline: auto;
 }
