--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -24,10 +24,10 @@
 	font-weight: 500;
 	font-size: 54px;
 	line-height: 1.1;
-	
 	text-align: center;
 	@media (max-width: 767px) {
 	font-size: 40px;
+	line-height: 1.2;
 	}
 }
 .txt-24{
