--- a/src/scss/blocks/_header-menu.scss
+++ b/src/scss/blocks/_header-menu.scss
@@ -84,19 +84,23 @@
 	}
 }
 .header-menu-wrapper{
-	
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	@media (max-width: 1023px) {
 	   position: fixed;
 	   top: 64px;
 		bottom: 0;
 		right: 0;
 		width: 100%;
+		left: auto;
 		background-color: rgba(46, 57, 77, .5);
 		display: flex;
 		justify-content: flex-end;
 		transform: translateX(120%);
 		transition: .4s;
-		&.active{transform: translateX(0);}
+		&.active{transform: translate(0, 0);}
 		.header-menu{
 			width: 100%;
 			max-width: 375px;
