--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -12,7 +12,7 @@ block content
 				span Страница Авторизации
 			a(href="partners-form.html")
 				span Стать партнером(форма)
-			//- a(href="#!")
-			//- 	span Отдельная страница
+			a(href="partners-success.html")
+				span Заявка принята!
 block variables
 	-var title = "Start page";
