--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -98,7 +98,10 @@ img {
 	vertical-align: middle;
 	object-fit: cover;
 }
-
+.img-cover{
+	width: 100%;
+	height: 100%;
+}
 input,
 button,
 textarea,select,
