--- a/src/scss/base/_vendore-class.scss
+++ b/src/scss/base/_vendore-class.scss
@@ -23,6 +23,7 @@
 .flx-center-column {
 	flex-direction: column;
 }
+
 .w-100{width: 100%!important;}
 .chevron-link{
 	display: flex;
@@ -47,6 +48,15 @@
 .mt-40 {
 	margin-top: 40px;
 }
+.mt-48 {
+	margin-top: 48px;
+}
+.mt-56 {
+	margin-top: 56px;
+}
+.mt-64 {
+	margin-top: 64px;
+}
 .mb-8 {
 	margin-bottom: 8px;
 }
@@ -66,7 +76,72 @@
 .mb-40 {
 	margin-bottom: 40px;
 }
-.ml-auto{margin-left: auto!important;}
-.mx-auto{
-	margin-inline: auto;
+.mb-48 {
+	margin-bottom: 48px;
+}
+
+.mb-56 {
+	margin-bottom: 56px;
+}
+
+.mb-64 {
+	margin-bottom: 64px;
+}
+.pt-8 {
+	padding-top: 8px;
+}
+
+.pt-16 {
+	padding-top: 16px;
+}
+
+.pt-24 {
+	padding-top: 24px;
+}
+
+.pt-32 {
+	padding-top: 32px;
+}
+
+.pt-40 {
+	padding-top: 40px;
+}
+.pt-48 {
+	padding-top: 48px;
+}
+.pt-56 {
+	padding-top: 56px;
+}
+.pt-64 {
+	padding-top: 64px;
+}
+.pb-8 {
+	padding-bottom: 8px;
+}
+
+.pb-16 {
+	padding-bottom: 16px;
+}
+
+.pb-24 {
+	padding-bottom: 24px;
+}
+
+.pb-32 {
+	padding-bottom: 32px;
+}
+
+.pb-40 {
+	padding-bottom: 40px;
+}
+.pb-48 {
+	padding-bottom: 48px;
+}
+
+.pb-56 {
+	padding-bottom: 56px;
+}
+
+.pb-64 {
+	padding-bottom: 64px;
 }
