--- a/src/scss/blocks/_cooki-popup.scss
+++ b/src/scss/blocks/_cooki-popup.scss
@@ -3,7 +3,7 @@
 	
 	padding: 48px 16px 32px;
 	background: var(--bg-bg-grey);
-	width: min(600px, 100%);
+	width: min(600px, calc(100% - 48px));
 	.btn-close{
 		position: absolute;
 		top: 16px;
@@ -16,6 +16,9 @@
 			
 		}
 	}
+	@media (max-width: 1023px) {
+	width: min(600px, calc(100% - 32px));
+	}
 
 }
 .cooki-popup{
@@ -24,4 +27,8 @@
 	bottom: 24px;
 	right: 24px;
 	.txt-18{margin-bottom: 10px;}
+	@media (max-width: 1023px) {
+		bottom: 16px;
+		right: 16px;
+	}
 }
