--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,5 +19,7 @@
  @import "sections/_header.scss";
  @import "sections/_main-hero.scss";
  @import "sections/_footer.scss";
+
+ @import "pages/_partners-success.scss";
   //ui
  @import "ui/_ui-navigation";
