add-catalogy-page

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -14,5 +14,7 @@ block content
 				span Стать партнером(форма)
 			a(href="partners-success.html")
 				span Заявка принята!
+			a(href="catalogy.html")
+				span Каталог
 block variables
 	-var title = "Start page";
