--- a/src/pug/ui/positions-classes.pug
+++ b/src/pug/ui/positions-classes.pug
@@ -22,4 +22,8 @@ html(lang="ru")
 				h2 Вспомогрательные классы
 
 				.container-dashboard__content
+				h3 bg-blue  - темный фоновый цвет 
+				h3 bg-grey  - светло-серый фоновый цвет
+				h3 .bx-sh   - тень блоку и отступы по 24 пикс
+				h3 .img-cover картинка по размерам родит блока
 				
