--- a/src/pug/ui/typography.pug
+++ b/src/pug/ui/typography.pug
@@ -102,3 +102,16 @@ html(lang="ru")
 					.link-item Ссылка с подчеркиванием по наведению	
 					pre.
 						.link-item Ссылка с подчеркиванием по наведению
+					hr
+					h3 ссылка со стрелкой спрфва
+					a(href="#!").txt-24.chevron-link Для мужчин
+						svg.svg-chevron-right
+							use(href='../img/sprite.svg#svg-chevron-right')
+					pre.
+						a(href="#!").txt-24.chevron-link Для мужчин
+							svg.svg-chevron-right
+								use(href='./img/sprite.svg#svg-chevron-right')
+					hr
+					.link-item Элемент ссылки с подчеркиванием
+					pre.
+						.link-item Элемент ссылки с подчеркиванием
