--- a/src/pug/ui/ui-navigation.pug
+++ b/src/pug/ui/ui-navigation.pug
@@ -10,7 +10,7 @@
 				li
 					a(href="typography.html") Типографика
 				li
-					a(href="positions-classes.html") Классы позиционирования
+					a(href="positions-classes.html") Классы
 				
 				li
 					a(href="icons.html") Иконки
@@ -21,6 +21,8 @@
 				
 				li
 					a(href="components.html") Компоненты
+				li
+					a(href="product-card.html") Карточка продукта
 		
 		.ui-panel-block__part
 			h3 Блоки
