--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -19,8 +19,29 @@ html(lang="ru")
 
 		block content
 			.container-dashboard
-				h2 Компоненты меню
+				h2 Компоненты
 
 				.container-dashboard__content
 					ul.ui-components
+						li.bg-grey
+							h3 Блок с иконками соц сетей
+							.social-block
+								a(href="#!")
+									img(src="../img/svg-social/vk2.svg" alt="vk")
+								a(href="#!")
+									img(src="../img/svg-social/vc2.svg" alt="vc")
+								a(href="#!")
+									img(src="../img/svg-social/dzen2.svg" alt="dzen")
+								a(href="#!")
+									img(src="../img/svg-social/tg2.svg" alt="tg")
+							pre.
+								.social-block
+									a(href="#!")
+										img(src="./img/svg-social/vk2.svg" alt="vk")
+									a(href="#!")
+										img(src="./img/svg-social/vc2.svg" alt="vc")
+									a(href="#!")
+										img(src="./img/svg-social/dzen2.svg" alt="dzen")
+									a(href="#!")
+										img(src="./img/svg-social/tg2.svg" alt="tg")
 						
