add-prod-slider

--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -23,6 +23,11 @@ html(lang="ru")
 
 				.container-dashboard__content
 					ul.ui-components
+						li
+							.breadcrumb
+								a(href="#!") Главная
+								a(href="#!") Весна 2024 для мужчин
+						
 						li.bg-grey
 							h3 Блок с иконками соц сетей
 							.social-block
