--- a/src/pug/ui/product-card.pug
+++ b/src/pug/ui/product-card.pug
@@ -62,7 +62,7 @@ html(lang="ru")
 		block content
 			.container-dashboard
 				h2 Карточка продукта
-				.select-color
+				.prod-colors
 					label.fake-input-label
 						input(type="radio" name="color-item")
 						span.fake-span(style="background:#2E394D")
