--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -133,6 +133,9 @@ input[type="submit"] {
 	-moz-appearance: none;
 	-webkit-appearance: none;
 }
+section{
+	padding-top: 16px;
+}
 .inner-main{
 	background-color: #fff;
 	padding-top: 64px;
