--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 @import "base/_icons.scss";
 @import "base/_vendore-class.scss";
 
+@import "blocks/_breadcrumb.scss";
 @import "blocks/_preloader.scss";
 @import "blocks/_buttons.scss";
 @import "blocks/_form.scss";
