--- a/src/scss/blocks/_product-card.scss
+++ b/src/scss/blocks/_product-card.scss
@@ -1,17 +1,56 @@
-.select-color{
+.prod-colors{
 	display: flex;
 	align-items: center;
-	column-gap: 10px;
+	column-gap: 16px;
 	padding-bottom: 5px;
 }
-.prod-card__img{
-	padding: 40px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	img{
-		// width: 100%;
-		// height: 100%;
-		// object-fit: contain;
+.prod-card{
+	&__img{
+		padding: 40px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		img{
+			// width: 100%;
+			// height: 100%;
+			// object-fit: contain;
+		}
 	}
+	&__title{
+		justify-content: space-between;
+		column-gap:16px;
+		.prod-card__price{
+			flex-shrink: 0; white-space: nowrap;
+			font-weight: 600;
+		}
+		.semi-16{
+			flex-grow: 1;
+		}
+	}
+}
+.swiper .swiper-pagination{
+	z-index: 5;
+	.swiper-pagination-bullets {bottom: 0}
+	.swiper-pagination-bullet {
+		height: 2px;
+		width: 56px;
+		background-color: var(--grey-line);
+		
+		margin-left: 2px;
+		margin-right: 2px;
+		transition: .3s;
+		border-radius: 1px;
+	}
+	
+	.swiper-pagination-bullet-active {
+		background-color:#6f6f6f;
+	}
+	&.main-hero-pagination{bottom: 32px}
+}
+.main-hero-slider.swiper .swiper-pagination{
+	.swiper-pagination-bullet{
+		background-color: white;
+		opacity: .3;
+	}
+	.swiper-pagination-bullet-active{opacity: 1;}
 }
