--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -139,6 +139,7 @@ section{
 .inner-main{
 	background-color: #fff;
 	padding-top: 64px;
+	padding-bottom: 80px;
 	@media (max-width: 767px) {
 		padding-top: 56px;
 	}
