--- a/src/scss/blocks/_product-card.scss
+++ b/src/scss/blocks/_product-card.scss
@@ -6,15 +6,16 @@
 }
 .prod-card{
 	&__img{
-		padding: 40px;
-		display: flex;
-		justify-content: center;
-		align-items: center;
+		width: 100%;
+		aspect-ratio: 45 / 64;
 		img{
-			// width: 100%;
-			// height: 100%;
-			// object-fit: contain;
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
 		}
+	}
+	&__footer{
+		padding-top: 16px;
 	}
 	&__title{
 		justify-content: space-between;
@@ -27,30 +28,28 @@
 			flex-grow: 1;
 		}
 	}
+	.slider{
+		padding-bottom: 10px;
+	}
 }
-.swiper .swiper-pagination{
-	z-index: 5;
-	.swiper-pagination-bullets {bottom: 0}
-	.swiper-pagination-bullet {
-		height: 2px;
-		width: 56px;
-		background-color: var(--grey-line);
-		
-		margin-left: 2px;
-		margin-right: 2px;
-		transition: .3s;
-		border-radius: 1px;
+
+
+.four-column{
+	display: grid;
+	grid-template-columns: repeat(12, 1fr);
+	gap: 24px;
+	.col {
+		grid-column: span 3;
+		width: auto;
 	}
 	
-	.swiper-pagination-bullet-active {
-		background-color:#6f6f6f;
+	.stretch-card {
+		grid-column: span 6;
+		grid-row: span 2;
+		img{
+			width: 100%;
+			height: 100%;
+		}
 	}
-	&.main-hero-pagination{bottom: 32px}
 }
-.main-hero-slider.swiper .swiper-pagination{
-	.swiper-pagination-bullet{
-		background-color: white;
-		opacity: .3;
-	}
-	.swiper-pagination-bullet-active{opacity: 1;}
-}
+
