--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 @import "blocks/_form.scss";
 @import "blocks/_header-menu.scss";
 @import "blocks/_header-search.scss";
+@import "blocks/_swiper.scss";
 
 @import "blocks/_cooki-popup.scss";
 @import "blocks/_product-card.scss";
