--- a/src/pug/mixins/_prod-card.pug
+++ b/src/pug/mixins/_prod-card.pug
@@ -6,15 +6,15 @@ mixin product(img)
 				//====slide====
 				.swiper-slide
 					.prod-card__img
-						img.lazy(src="../img/"+ img +".webp", width="450" height="640" alt="img")
+						img.lazy(src="./img/"+ img +".webp", width="450" height="640" alt="img")
 				//====slide====
 				.swiper-slide
 					.prod-card__img
-						img.lazy(src="../img/"+ img +".webp", width="370" height="560" alt="img")
+						img.lazy(src="./img/"+ img +".webp", width="370" height="560" alt="img")
 				//====slide====
 				.swiper-slide
 					.prod-card__img
-						img.lazy(src="../img/"+ img +".webp", width="370" height="560" alt="img")
+						img.lazy(src="./img/"+ img +".webp", width="370" height="560" alt="img")
 			//==== pagination===
 			.swiper-pagination.slider-pagination
 		//=====product info=====
