--- a/src/pug/pages/partners-form.pug
+++ b/src/pug/pages/partners-form.pug
@@ -3,7 +3,7 @@ extends ../layouts/layout.pug
 block content
 	.page-wrapper.bg-blue
 		include ../sections/_header
-		main.main
+		main.main.flx-center
 			include ../sections/_partners-form.pug
 
 
