--- a/src/pug/ui/ui-navigation.pug
+++ b/src/pug/ui/ui-navigation.pug
@@ -8,6 +8,8 @@
 				li
 					a(href="colors.html") Цветовая схема
 				li
+					a(href="grid.html") Grid			
+				li
 					a(href="typography.html") Типографика
 				li
 					a(href="positions-classes.html") Классы
