--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -1,13 +1,11 @@
 footer.footer
 	.container
-		//======FOOTER ROW====
-		.row.footer-top
-			.col-2.col-lg-4.col-md-12
-				.footer-logo
-					a(href="#!").logo
-						+svg-icon('logo')
-			.col-4.col-xxl-5.col-xl-6.col-lg-4.col-md-6.ofs-2.ofs-xxl-1.ofs-xl-0
-				nav.menu-nav.d-flex
+		.content-grid.footer-top
+			.footer-logo
+				a(href="#!").logo
+					+svg-icon('logo')
+			
+				nav.menu-nav
 					//=====block====
 					.menu-nav-block
 						.semi-16 Для мужчин
@@ -19,8 +17,7 @@ footer.footer
 						a(href="#!") Весна 2024  Женская коллекция
 						a(href="#!") Зима 2024 Женская коллекция
 			
-			.col-3.col-xxl-4.col-lg-4.col-md-6.col-sm-12.ofs-1.ofs-xxl-0
-				nav.menu-nav.d-flex
+				nav.menu-nav.menu-nav
 					//=====block====
 					.menu-nav-block
 						a(href="#!") О бренде
