remove-bootstrap-col

--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -5,31 +5,31 @@ footer.footer
 				a(href="#!").logo
 					+svg-icon('logo')
 			
-				nav.menu-nav
-					//=====block====
-					.menu-nav-block
-						.semi-16 Для мужчин
-						a(href="#!") Весна 2024 Мужская коллекция
-						a(href="#!") Зима 2024 Мужская коллекция
-					//=====block====
-					.menu-nav-block
-						.semi-16 Для женщин
-						a(href="#!") Весна 2024  Женская коллекция
-						a(href="#!") Зима 2024 Женская коллекция
-			
-				nav.menu-nav.menu-nav
-					//=====block====
-					.menu-nav-block
-						a(href="#!") О бренде
-						a(href="#!") Вакансии
-						a(href="#!") Контакты
-						a(href="#!") Где купить
+			nav.menu-nav
+				//=====block====
+				.menu-nav-block
+					.semi-16 Для мужчин
+					a(href="#!") Весна 2024 Мужская коллекция
+					a(href="#!") Зима 2024 Мужская коллекция
+				//=====block====
+				.menu-nav-block
+					.semi-16 Для женщин
+					a(href="#!") Весна 2024  Женская коллекция
+					a(href="#!") Зима 2024 Женская коллекция
 		
-					//=====block====
-					.menu-nav-block
-						a(href="#!") Технологии и материалы
-						a(href="#!") Таблица размеров
-						a(href="#!") Уход за изделеем
+			nav.menu-nav.menu-nav--right
+				//=====block====
+				.menu-nav-block
+					a(href="#!") О бренде
+					a(href="#!") Вакансии
+					a(href="#!") Контакты
+					a(href="#!") Где купить
+	
+				//=====block====
+				.menu-nav-block
+					a(href="#!") Технологии и материалы
+					a(href="#!") Таблица размеров
+					a(href="#!") Уход за изделеем
 
 		//======FOOTER ROW====
 		.footer-bottom.d-flex
