--- a/src/pug/sections/_catalogy-content.pug
+++ b/src/pug/sections/_catalogy-content.pug
@@ -10,19 +10,19 @@ section.catalogy-content
 			p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 		.container-wrapper
 			.catalogy-content.content-grid
-				.col_3
+				.col-3
 					+product('product')
-				.col_3
+				.col-3
 					+product('product3')
-				.col_3
+				.col-3
 					+product('product')
-				.col_3
+				.col-3
 					+product('product3')
-				.col_3
+				.col-3
 					+product('product')
-				.col_3
+				.col-3
 					+product('product')
-				.col_3.stretch-card
+				.col-3.stretch-card
 					picture
 						source(srcset="./img/hit-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
 						source(srcset="./img/hit-w370.webp", media="(max-width: 767px)")
@@ -32,13 +32,13 @@ section.catalogy-content
 						img.img-cover.lazy(src="./img/hit.webp", alt="")
 						
 						
-				.col_3
+				.col-3
 					+product('product')
-				.col_3
+				.col-3
 					+product('product')
-				.col_3
+				.col-3
 					+product('product')
-				.col_3
+				.col-3
 					+product('product')
-				.col_3
+				.col-3
 					+product('product')
